RESOLVED FIXED112536
ewk_settings_memory_cache_clear should clear JS garbage and release FastMalloc's free pages to OS
https://bugs.webkit.org/show_bug.cgi?id=112536
Summary ewk_settings_memory_cache_clear should clear JS garbage and release FastMallo...
Jose Lejin PJ
Reported 2013-03-18 00:47:12 PDT
ewk_settings_memory_cache_clear() should clear JS garbage and release FastMalloc's free pages to OS In Qt recently patch landed https://bugs.webkit.org/show_bug.cgi?id=111094 / https://bugs.webkit.org/show_bug.cgi?id=111605. Same logic applies to EFL also.
Attachments
Patch (1.81 KB, text/plain)
2013-03-18 03:29 PDT, Jose Lejin PJ
no flags
Patch (2.45 KB, patch)
2013-03-18 03:33 PDT, Jose Lejin PJ
no flags
WIP (17.63 KB, patch)
2013-03-19 02:47 PDT, Hajime Morrita
no flags
WIP (28.21 KB, patch)
2013-03-19 04:59 PDT, Hajime Morrita
no flags
Patch (2.59 KB, patch)
2013-03-20 03:08 PDT, Jose Lejin PJ
no flags
Jose Lejin PJ
Comment 1 2013-03-18 03:29:54 PDT
Jose Lejin PJ
Comment 2 2013-03-18 03:33:03 PDT
Hajime Morrita
Comment 3 2013-03-19 02:47:33 PDT
Jose Lejin PJ
Comment 4 2013-03-19 03:20:07 PDT
Morrita is the patch related to this issue ? Please explain. (In reply to comment #3) > Created an attachment (id=193770) [details] > WIP
Hajime Morrita
Comment 5 2013-03-19 04:59:38 PDT
Hajime Morrita
Comment 6 2013-03-19 20:05:26 PDT
Comment on attachment 193795 [details] WIP Ooops. Uploaded to the wrong bug. Sorry for disturbance...
Jose Lejin PJ
Comment 7 2013-03-19 20:23:43 PDT
(In reply to comment #2) > Created an attachment (id=193518) [details] > Patch Changed this to active patch.
Gyuyoung Kim
Comment 8 2013-03-20 02:13:15 PDT
Comment on attachment 193518 [details] Patch Looks good to me. Thanks.
Gyuyoung Kim
Comment 9 2013-03-20 02:15:10 PDT
Comment on attachment 193518 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=193518&action=review > Source/WebKit/efl/ChangeLog:7 > + Though this bug title represents patch, I prefer to write detail description here.
Jose Lejin PJ
Comment 10 2013-03-20 03:08:12 PDT
Jose Lejin PJ
Comment 11 2013-03-20 03:09:34 PDT
(In reply to comment #9) > (From update of attachment 193518 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=193518&action=review > > > Source/WebKit/efl/ChangeLog:7 > > + > > Though this bug title represents patch, I prefer to write detail description here. Thanks Kim. I updated changelog.
WebKit Review Bot
Comment 12 2013-03-20 04:07:09 PDT
Comment on attachment 194010 [details] Patch Clearing flags on attachment: 194010 Committed r146322: <http://trac.webkit.org/changeset/146322>
WebKit Review Bot
Comment 13 2013-03-20 04:07:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.