ewk_settings_memory_cache_clear should clear JS garbage and release FastMalloc's free pages to OS https://bugs.webkit.org/show_bug.cgi?id=112536

Patch by Jose Lejin PJ <jose.lejin@gmail.com> on 2013-03-20
Reviewed by Gyuyoung Kim.

Added changes to clear JS garbage and release FastMalloc's free pages to OS
while calling ewk_settings_memory_cache_clear API.

* ewk/ewk_settings.cpp:
(ewk_settings_memory_cache_clear):

Canonical link: https://commits.webkit.org/131116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146322 268f45cc-cd09-0410-ab3c-d52691b4dbfc